fix layout issues allowing better component composition

--- a/app/globals.css
+++ b/app/globals.css
@@ -39,7 +39,7 @@ a {
 p {
   font-size: 1.125rem;
   font-weight: 250;
-  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 p:first-of-type {
